--- a/assets/css/bni-style.css
+++ b/assets/css/bni-style.css
@@ -95,6 +95,21 @@
   width: 100%;
   border-radius: 20px;
 }
+.bni-event-content .card-title{
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 140%;
+  color: #171717;
+  margin-top: 16px;
+}
+.bni-event-content .card-text{
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  color: #6B6B6B;
+}
 .bni-event-content .bni-event-meta{
   display: flex;
   justify-content: space-between;
